--- a/src/web-interface/index.html
+++ b/src/web-interface/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <h1>Hello World!</h1>
   </body>
 </html>
